--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node-fetch": "^2.6.4",
     "dotenv": "^16.3.1",
     "parcel": "^2.9.3",
     "typescript": "^5.2.2",
